<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>


    <!-- This POM is used as base for any child project in a way that it is
        not necessary manage details of each child individually. However, every child
        must be considered as an independent project, and thus, their coordinates
        have not to be align with the defined here. The version number will be always
        RELEASE regardless the versions of the children. -->

    <groupId>es.iti.kukumo</groupId>
    <artifactId>kukumo-project</artifactId>
    <packaging>pom</packaging>
    <version>${revision}</version>

    <name>Kukumo</name>
    <description>Project containing Kukumo as well as other useful tools</description>

    <modules>
        <!-- tools -->
        <module>kukumo-tools/jext</module>
        <module>kukumo-tools/jext-spring</module>
        <module>kukumo-tools/maven-fetcher</module>
        <module>kukumo-tools/gherkin-parser</module>
        <module>kukumo-tools/maven-aether-provider-java9</module>
        <module>kukumo-tools/distribution-maven-plugin</module>
        <!-- kukumo -->
        <module>kukumo</module>
        <!-- plugins -->
        <module>kukumo-plugins/kukumo-rest</module>
        <module>kukumo-plugins/kukumo-html-report</module>
        <module>kukumo-plugins/kukumo-rest-l10n</module>
        <module>kukumo-plugins/kukumo-db</module>
        <module>kukumo-plugins/kukumo-db-l10n</module>
        <module>kukumo-plugins/kukumo-spring</module>
        <module>kukumo-plugins/kukumo-io</module>
        <module>kukumo-plugins/kukumo-io-l10n</module>
        <module>kukumo-plugins/kukumo-amqp</module>
        <module>kukumo-plugins/kukumo-amqp-l10n</module>
        <!-- examples -->
        <module>kukumo-examples/spring-junit-example</module>
        <module>kukumo-examples/spring-verify-example</module>
        <module>kukumo-examples/spring-launcher-example</module>
        <!-- other -->
        <module>kukumo-server-quarkus</module>
        <module>kukumo-docker</module>
    </modules>


    <!-- ============================================================= The following
        configuration will be inherited by every module ============================================================= -->

    <organization>
        <name>ITI - Instituto Tecnológico de Informática</name>
        <url>https://www.iti.es</url>
    </organization>
    <licenses>
        <license>
            <name>MPL-2.0</name>
            <url>https://www.mozilla.org/en-US/MPL/2.0/</url>
        </license>
    </licenses>


    <properties>
        <!-- kukumo version -->
        <revision>1.3.0</revision>

        <!-- encoding -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <!-- build versions -->
        <java.version>11</java.version>
        <maven.compiler.version>3.8.0</maven.compiler.version>
        <maven.compiler.release>11</maven.compiler.release>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <!-- paths -->
        <maven.repo.local>${user.home}/.m2/repository</maven.repo.local>

        <!-- dependency versions -->
        <lombok.version>1.18.10</lombok.version>
        <slf4j-api.version>1.7.29</slf4j-api.version>
        <log4j.version>2.13.0</log4j.version>
        <junit.version>4.13-rc-2</junit.version>
        <assertj-core.version>3.14.0</assertj-core.version>
        <jackson.version>2.10.1</jackson.version>
        <snakeyaml.version>1.25</snakeyaml.version>
        <hamcrest.version>2.2</hamcrest.version>
        <plexus-utils.version>3.2.0</plexus-utils.version>
        <plexus-classworlds.version>2.6.0</plexus-classworlds.version>
        <plexus-component-annotations.version>2.1.0</plexus-component-annotations.version>
        <plexus-interpolation.version>1.26</plexus-interpolation.version>
        <commons-lang3.version>3.9</commons-lang3.version>
        <commons-cli.version>1.4</commons-cli.version>
        <commons-io.version>2.6</commons-io.version>
        <commons-logging.version>1.2</commons-logging.version>
        <commons-configuration2.version>2.6</commons-configuration2.version>
        <maven-plugin-api.version>3.6.1</maven-plugin-api.version>
        <maven-plugin-annotations.version>3.4</maven-plugin-annotations.version>
        <maven-artifact.version>3.6.1</maven-artifact.version>
        <maven-fetcher.version>1.0.0</maven-fetcher.version>
        <maven-plugin-plugin.version>3.6.0</maven-plugin-plugin.version>
        <aether.version>1.0.2.v20150114</aether.version>
        <guice.version>4.2.2</guice.version>
        <guava.version>28.1-jre</guava.version>
        <javax.inject.version>1</javax.inject.version>
        <jaxb-api.version>2.3.1</jaxb-api.version>
        <groovy.version>3.0.9</groovy.version>


        <!-- plugin versions -->
        <jacoco.version>0.8.2</jacoco.version>
        <maven.source.plugin.version>3.0.1</maven.source.plugin.version>
        <surefire.report.version>2.6</surefire.report.version>
        <maven.site.version>3.7.1</maven.site.version>
        <maven.ant.version>1.8</maven.ant.version>
        <maven.info.reports.version>3.0.0</maven.info.reports.version>
        <maven.javadoc.version>2.8</maven.javadoc.version>
        <maven.jar.plugin.version>3.0.0</maven.jar.plugin.version>
        <dockerfile-maven-version>1.4.13</dockerfile-maven-version>
    </properties>




    <!-- dependency management -->
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
            </dependency>
            <dependency>
                <groupId>org.hamcrest</groupId>
                <artifactId>hamcrest</artifactId>
                <version>${hamcrest.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-slf4j-impl</artifactId>
                <version>${log4j.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.slf4j</groupId>
                        <artifactId>slf4j-api</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j-api.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.maven</groupId>
                <artifactId>maven-plugin-api</artifactId>
                <version>${maven-plugin-api.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.codehaus.plexus</groupId>
                        <artifactId>plexus-classworlds</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.codehaus.plexus</groupId>
                        <artifactId>plexus-utils</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.codehaus.plexus</groupId>
                        <artifactId>plexus-component-annotations</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.apache.maven.plugin-tools</groupId>
                <artifactId>maven-plugin-annotations</artifactId>
                <version>${maven-plugin-annotations.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.apache.maven</groupId>
                        <artifactId>maven-artifact</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.apache.maven</groupId>
                <artifactId>maven-artifact</artifactId>
                <version>${maven-artifact.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.apache.commons</groupId>
                        <artifactId>commons-lang3</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>com.google.inject</groupId>
                <artifactId>guice</artifactId>
                <version>${guice.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>com.google.guava</groupId>
                        <artifactId>guava</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-configuration2</artifactId>
                <version>${commons-configuration2.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.apache.commons</groupId>
                        <artifactId>commons-lang3</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <groupId>org.codehaus.groovy</groupId>
                <artifactId>groovy-all</artifactId>
                <version>${groovy.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>




    <!-- basic build features -->
    <build>
        <plugins>
            <!-- specific version of maven compiler -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                    <verbose>${verbose}</verbose>
                    <compilerArgs>
                        <arg>-Xlint:all</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <!-- Surefire with JaCoCo agent -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.18.1</version>
                <configuration>
                    <argLine>${surefireJacocoAgent}
                        -Djdk.net.URLClassPath.disableClassPathURLCheck=true
                        --illegal-access=permit</argLine>
                </configuration>
            </plugin>
            <!-- Failsafe with JaCoCo agent -->
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.18.1</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                        <configuration>
                            <argLine>${failsafeJacocoAgent}
                                -Djdk.net.URLClassPath.disableClassPathURLCheck=true
                                --illegal-access=permit</argLine>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- JaCoCo coverage -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <executions>
                    <execution>
                        <id>pre-unit-test</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <configuration>
                            <append>true</append>
                            <destFile>${project.build.directory}/jacoco.exec</destFile>
                            <propertyName>surefireJacocoAgent</propertyName>
                        </configuration>
                    </execution>
                    <execution>
                        <id>pre-integration-test</id>
                        <goals>
                            <goal>prepare-agent-integration</goal>
                        </goals>
                        <configuration>
                            <append>true</append>
                            <destFile>${project.build.directory}/jacoco-it.exec</destFile>
                            <propertyName>failsafeJacocoAgent</propertyName>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- generate additional jar with sources -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven.source.plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- copy dependencies -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <phase>prepare-package</phase>
                    </execution>
                </executions>
            </plugin>
            <!-- maven site -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>${maven.site.version}</version>
            </plugin>


        </plugins>
    </build>




    <distributionManagement>
        <site>
            <id>local-site</id>
            <url>${project.baseUri}</url>
        </site>
    </distributionManagement>



    <!-- Reports to generate -->
    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>${maven.info.reports.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven.javadoc.version}</version>
                <configuration>
                    <failOnError>false</failOnError>
                    <doclint>none</doclint>
                    <quiet />
                </configuration>
                <reportSets>
                    <reportSet>
                        <id>default</id>
                        <reports>
                            <report>javadoc</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>${surefire.report.version}</version>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>report</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>
        </plugins>
    </reporting>



    <profiles>
        <!-- Copy site resources -->
        <profile>
            <id>build-site</id>
            <activation>
                <file>
                    <exists>src/site/site.xml</exists>
                </file>
            </activation>
            <build>
                <plugins>
                    <!-- Copy site resources -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-antrun-plugin</artifactId>
                        <version>${maven.ant.version}</version>
                        <executions>
                            <execution>
                                <id>copy-markdown-docs</id>
                                <phase>pre-site</phase>
                                <goals>
                                    <goal>run</goal>
                                </goals>
                                <configuration>
                                    <target>
                                        <!-- Uses README.md as the main page of the site -->
                                        <copy file="${basedir}/README.md"
                                            tofile="${basedir}/src/site/markdown/index.md"
                                            overwrite="true" failonerror="false"></copy>
                                        <!-- Use any .md file from /docs/* as a site resource -->
                                        <copy file="${basedir}/docs/*.md"
                                            todir="${basedir}/src/site/markdown" overwrite="true"
                                            failonerror="false"></copy>
                                    </target>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>

    </profiles>



</project>